@@ -79,6 +79,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Fortran                Cedric Arrabie
 - glSlang                Benny Baumann
 - Gettext                Milian Wolff
+- Gnuplot                Milian Wolff
 - GML                    José Jorge Enríquez Rodríguez
 - Groovy                 Ivan F. Villanueva B.
 - Haskell                Dagit
