@@ -18,6 +18,7 @@ Version 1.0.8
      * Boo (Marcus Griep)
      * CIL (Common Intermediate Language, .NET Assembly) (Marcus Griep)
      * COBOL (Benny Baumann)
+     * Gnuplot (milian)
      * KLoneC (Mickael Auger)
      * KLoneC++ (Mickael Auger)
      * PowerShell (Frode Aarebrot)
